--- a/_res/css/discord.css
+++ b/_res/css/discord.css
@@ -215,32 +215,32 @@ code {
 
 @font-face {
 	font-family: Discord;
-	src: url(https://MoonLightPerson.github.io/_res/fonts/Discord.otf);
+	src: url(https://mwittrien.github.io/_res/fonts/Discord.otf);
 }
 @font-face {
 	font-family: Whitney;
 	font-weight: 300;
-	src: url(https://MoonLightPerson.github.io/_res/fonts/Whitney300.woff) format("woff");
+	src: url(https://mwittrien.github.io/_res/fonts/Whitney300.woff) format("woff");
 }
 @font-face {
 	font-family: Whitney;
 	font-weight: 400;
-	src: url(https://MoonLightPerson.github.io/_res/fonts/Whitney400.woff) format("woff");
+	src: url(https://mwittrien.github.io/_res/fonts/Whitney400.woff) format("woff");
 }
 @font-face {
 	font-family: Whitney;
 	font-weight: 500;
-	src: url(https://MoonLightPerson.github.io/_res/fonts/Whitney500.woff) format("woff");
+	src: url(https://mwittrien.github.io/_res/fonts/Whitney500.woff) format("woff");
 }
 @font-face {
 	font-family: Whitney;
 	font-weight: 600;
-	src: url(https://MoonLightPerson.github.io/_res/fonts/Whitney600.woff) format("woff");
+	src: url(https://mwittrien.github.io/_res/fonts/Whitney600.woff) format("woff");
 }
 @font-face {
 	font-family: Whitney;
 	font-weight: 700;
-	src: url(https://MoonLightPerson.github.io/_res/fonts/Whitney700.woff) format("woff");
+	src: url(https://mwittrien.github.io/_res/fonts/Whitney700.woff) format("woff");
 }
 
 body, html {
